--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -6,11 +6,11 @@
       <table class="table table-dark table-bordered table-hover">
         <thead>
           <tr>
-            <td>n°</td>
-            <td>Name</td>
-            <td>Address</td>
-            <td>Phone</td>
-            <td>Actions</td>
+            <td>Id</td>
+            <td>Nombre</td>
+            <td>Direción</td>
+            <td>Teléfono</td>
+            <td>Acciones</td>
           </tr>
         </thead>
         <tbody>
@@ -40,24 +40,24 @@
           <input
             type="text"
             name="name"
-            placeholder="Name"
+            placeholder="Nombre"
             class="form-control mb-2"
             autofocus
           />
           <input
             type="email"
             name="address"
-            placeholder="Address"
+            placeholder="Dirección"
             class="form-control mb-2"
           />
           <input
             type="text"
             name="phone"
-            placeholder="Phone"
+            placeholder="Teléfono"
             class="form-control mb-2"
           />
 
-          <button type="submit" class="btn btn-info">save customer</button>
+          <button type="submit" class="btn btn-info">Guardar</button>
         </form>
       </div>
     </div>
