--- a/src/views/partials/_footer.ejs
+++ b/src/views/partials/_footer.ejs
@@ -1,3 +1,9 @@
-
+<!-- Footer -->
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+    <span class="text-muted">© 2024 Mysql CRUD -Á &A-</span>
+  </div>
+</footer>
 </body>
 </html>
+
