--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -8,7 +8,7 @@
           <tr>
             <td>Id</td>
             <td>Nombre</td>
-            <td>Direción</td>
+            <td>Email</td>
             <td>Teléfono</td>
             <td>Acciones</td>
           </tr>
@@ -47,7 +47,7 @@
           <input
             type="email"
             name="address"
-            placeholder="Dirección"
+            placeholder="Email"
             class="form-control mb-2"
           />
           <input
