--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -6,7 +6,7 @@
       <table class="table table-dark table-bordered table-hover">
         <thead>
           <tr>
-            <td>Id</td>
+            <!-- Eliminamos la columna 'Id' -->
             <td>Nombre</td>
             <td>Email</td>
             <td>Teléfono</td>
@@ -14,10 +14,9 @@
           </tr>
         </thead>
         <tbody>
-          <% if (customers) { %> <% for(var i = 0; i < customers.length; i++) {
-          %>
+          <% if (customers) { %> <% for(var i = 0; i < customers.length; i++) { %>
           <tr>
-            <td><%= (i + 1) %></td>
+            <!-- Eliminamos la columna 'Id' y ajustamos las demás -->
             <td><%= customers[i].name %></td>
             <td><%= customers[i].address %></td>
             <td><%= customers[i].phone %></td>
@@ -65,3 +64,4 @@
 </div>
 
 <%- include("partials/_footer") %>
+
