--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -42,18 +42,21 @@
             placeholder="Nombre"
             class="form-control mb-2"
             autofocus
+            maxlength="45"
           />
           <input
             type="email"
             name="address"
             placeholder="Email"
             class="form-control mb-2"
+            maxlength="95"
           />
           <input
             type="text"
             name="phone"
             placeholder="Teléfono"
             class="form-control mb-2"
+            maxlength="12"
           />
 
           <button type="submit" class="btn btn-info">Guardar</button>
