--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -7,7 +7,7 @@
         <thead>
           <tr>
             <!-- Eliminamos la columna 'Id' -->
-            <td>Nombre</td>
+            <td>Nombre + Apeel</td>
             <td>Email</td>
             <td>Teléfono</td>
             <td>Acciones</td>
